--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "scripts": {
     "build": "postcss src/styles.css -o public/output.css",
     "watch": "chokidar \"src/**/*.css\" -c \"npm run build\""
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.3"
+  },
+  "devDependencies": {
+    "postcss": "^8.4.38"
   }
 }
